diesel_compile_tests/tests/fail/derive/bad_column_name.stderr
error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(column_name = foo)]`
  --> tests/fail/derive/bad_column_name.rs:16:25
   |
LL |     #[diesel(column_name)]
   |                         ^

error: expected `=`
  --> tests/fail/derive/bad_column_name.rs:24:25
   |
LL |     #[diesel(column_name(another))]
   |                         ^

error: expected string literal
  --> tests/fail/derive/bad_column_name.rs:32:28
   |
LL |     #[diesel(column_name = true)]
   |                            ^^^^

error: Expected valid identifier, found `spa ce`. Diesel does not support column names with whitespaces yet
  --> tests/fail/derive/bad_column_name.rs:40:28
   |
LL |     #[diesel(column_name = "spa ce")]
   |                            ^^^^^^^^

error: Expected valid identifier, found `spa ce`. Diesel does not support column names with whitespaces yet
  --> tests/fail/derive/bad_column_name.rs:48:28
   |
LL |     #[diesel(column_name = "spa ce")]
   |                            ^^^^^^^^
